k8s/app-stack.yaml
# API (PHP)
apiVersion: v1
kind: Service
metadata:
  name: php-api
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: php-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-api
  template:
    metadata:
      labels:
        app: php-api
    spec:
      containers:
      - name: php
        image: olegmilantiev/yc-php
      - name: nginx
        image: nginx:stable-alpine
        ports:
          - containerPort: 80
        volumeMounts:
          - name: config-volume
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf
          # Если вам нужно шарить статику из PHP-образа в Nginx, 
          # здесь обычно добавляется emptyDir volume
      volumes:
        - name: config-volume
          configMap:
            name: nginx-config
---
# FFMPEG Worker
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ffmpeg-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ffmpeg-worker
  template:
    metadata:
      labels:
        app: ffmpeg-worker
    spec:
      containers:
      - name: ffmpeg
        image: olegmilantiev/yc-ffmpeg
---
# Вход в кластер (Ingress)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yc-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: php-api
            port:
              number: 80
